# Icarus

./: CMakeLists.txt  README.md
include/: Camera.h  GameObject.h  ShaderUtils.h  Window.h
src/: Camera.cpp  GameObject.cpp  ShadeUtils.cpp  Window.cpp  main.cpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
